Default Notification template wraps in IE11. Fixes #3057

--- a/styles/web/common/notification.less
+++ b/styles/web/common/notification.less
@@ -5,6 +5,7 @@
     padding: .6em .5em;
     cursor: default;
     position: relative;
+    white-space: nowrap;
 }
 
 .k-notification-button .k-notification-wrap
